--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -1,6 +1,6 @@
 ﻿<UserControl x:Class="Diagnosis.App.Screens.Search"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:сontrols="clr-namespace:Diagnosis.App.Controls"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -25,7 +25,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel>
-            <сontrols:AutoComplete DataContext="{Binding WordSearch}" />
+            <controls:AutoComplete DataContext="{Binding WordSearch}" />
             <DockPanel>
                 <StackPanel DockPanel.Dock="Top"
                         Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
@@ -33,7 +33,7 @@
                     <ListView ItemsSource="{Binding Words}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <сontrols:TreeItemLight />
+                                <controls:TreeItemLight />
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
