--- a/Diagnosis.App/Screens/SearchTester.xaml
+++ b/Diagnosis.App/Screens/SearchTester.xaml
@@ -1,21 +1,61 @@
-﻿<UserControl xmlns:Controls="clr-namespace:Diagnosis.App.Controls"  x:Class="Diagnosis.App.Screens.SearchTester"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Background="White"
-        >
+﻿<UserControl xmlns:Controls="clr-namespace:Diagnosis.App.Controls"
+             x:Class="Diagnosis.App.Screens.SearchTester"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             Background="White">
+    <UserControl.Resources>
+        <Style TargetType="Separator">
+            <Setter Property="Margin" Value="0,5,0,10" />
+        </Style>
+    </UserControl.Resources>
     <StackPanel>
-        <TextBlock>Word AutoComplete</TextBlock>
+        <TextBlock>Word RootSearcher Float</TextBlock>
+        <Controls:FloatSearch DataContext="{Binding WordSearch}" />
+        <Separator/>
+        
+        <TextBlock>Word WordSearcher AutoComplete</TextBlock>
         <Controls:AutoComplete DataContext="{Binding WordAutoComplete}" />
-        
-        <TextBlock>Diagnosis AutoComplete</TextBlock>
+        <Separator/>
+
+        <TextBlock>Word WordSearcherComposite AutoComplete</TextBlock>
+        <Controls:AutoComplete DataContext="{Binding WordAutoCompleteComposite}" />
+        <Separator/>
+
+        <TextBlock>Diagnosis DiagnosisSearcher AutoComplete</TextBlock>
         <Controls:AutoComplete DataContext="{Binding DiagnosisAutoComplete}" />
-        
-        <TextBlock>Diagnosis Float</TextBlock>
-        <Controls:FloatSearch DataContext="{Binding DiagnosisSearch}"/>
+        <Separator/>
 
-        <TextBlock>Diagnosis SearchTree</TextBlock>
+        <TextBlock>Diagnosis RootSearcher Float</TextBlock>
+        <Controls:FloatSearch DataContext="{Binding DiagnosisSearch}" />
+        <Separator/>
+
+        <TextBlock>Diagnosis FiltratingSearcher SearchTree</TextBlock>
         <Controls:SearchTree DataContext="{Binding DiagnosisFilteringSearch}" />
+        <Separator/>
 
-        <TextBlock>Complex AutoCompleteBox</TextBlock>
+        <TextBlock>AutoCompleteBox</TextBlock>
         <Controls:InputTextBox DataContext="{Binding AutoComplete}" />
+
+        <StackPanel>
+            <TextBlock Margin="0,0,0,2">Слова:</TextBlock>
+            <ListView ItemsSource="{Binding Words}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <controls:TreeItemLight />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
+        <StackPanel>
+            <TextBlock Margin="0,0,0,2">Диагнозы:</TextBlock>
+            <ListView ItemsSource="{Binding Diagnoses}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <controls:TreeItemLight />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
     </StackPanel>
 </UserControl>
