fix saving hr editor state

--- a/Diagnosis.App/Controls/Card/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/Card/HealthRecord.xaml
@@ -11,17 +11,17 @@
              MinHeight="25"
              Focusable="True"
              IsTabStop="True">
+    <UserControl.Resources>
+        <Style TargetType="Grid" x:Key="outer">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Editable.IsDirty}" Value="True">
+                    <Setter Property="Background" Value="#FFFFCCCC" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
 
-    <Grid>
-        <Grid.Style>
-            <Style TargetType="Grid">
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding Editable.IsDirty}" Value="True">
-                        <Setter Property="Background" Value="#FFFFCCCC" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-        </Grid.Style>
+    <Grid Style="{StaticResource outer}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
             <ColumnDefinition Width="*" />
