--- a/Diagnosis.App/Styles/TabControl.xaml
+++ b/Diagnosis.App/Styles/TabControl.xaml
@@ -1,31 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="tabHeaderSpecial" TargetType="{x:Type TabItem}">
-        <Setter Property="IsEnabled" Value="False" />
+    <Style x:Key="tabHeaderWithExpander" TargetType="{x:Type TabItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
                     <Border x:Name="Spacer"
-                                       Width="Auto"
-                                       Height="Auto"
-                                       Padding="0 0 0 0"
-                                       Margin="0 0 0 0"
-                                       BorderBrush="Transparent"
-                                       BorderThickness="0">
+                            Width="Auto"
+                            Height="Auto"
+                            Padding="0 0 0 0"
+                            Margin="0 0 0 0"
+                            BorderBrush="Transparent"
+                            BorderThickness="0">
                         <Border
-                                           x:Name="Border"
-                                           Width="Auto"
-                                           Height="Auto"
-                                           BorderBrush="DarkGray"
-                                           BorderThickness="0,0,0,0"
-                                           CornerRadius="6,6,0,0"
-                                           VerticalAlignment="Bottom">
+                                x:Name="Border"
+                                Width="Auto"
+                                Height="Auto"
+                                BorderBrush="DarkGray"
+                                BorderThickness="0,0,0,0"
+                                CornerRadius="6,6,0,0"
+                                VerticalAlignment="Bottom">
                             <ContentPresenter
                                                x:Name="ContentSite"
-                                               VerticalAlignment="Center"
-                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Stretch"
+                                               HorizontalAlignment="Stretch"
                                                ContentSource="Header"
-                                               Margin="8,3,8,3"
+                                               Margin="0"
                                                Width="Auto"
                                                Height="Auto" />
                         </Border>
