--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -52,7 +52,7 @@
                         </Grid.ColumnDefinitions>
                         
                         <TextBlock Text="{Binding ID}" />
-                        <TextBlock Text="{Binding ShortName}" Grid.Column="1" />
+                        <TextBlock Text="{Binding Self, Converter={StaticResource shortName}}" Grid.Column="1" />
                         <TextBlock x:Name="unsaved"
                                    Grid.Column="1"
                                    HorizontalAlignment="Right"
