--- a/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Diagnosis.App.Controls.Forms"  
-             x:Class="Diagnosis.App.Controls.Forms.CategoryChooser"
+             xmlns:local="clr-namespace:Diagnosis.App.Controls.Editors"  
+             x:Class="Diagnosis.App.Controls.Editors.CategoryChooser"
              mc:Ignorable="d"             
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
