--- a/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
@@ -1,6 +1,6 @@
-﻿<UserControl xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
+﻿<UserControl xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             x:Class="Diagnosis.App.Controls.Forms.HealthRecordEditor"
+             x:Class="Diagnosis.App.Controls.Editors.HealthRecordEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -24,15 +24,15 @@
     </UserControl.Resources>
     <StackPanel>
         <DockPanel>
-            <forms:CategoryChooser HorizontalAlignment="Left" />
+            <editors:CategoryChooser HorizontalAlignment="Left" />
         </DockPanel>
         <DockPanel>
             <Label Content="дата" />
-            <forms:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}"
+            <editors:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}"
                                          Month="{Binding FromMonth, Mode=TwoWay}"
                                          Day="{Binding FromDay, Mode=TwoWay}" />
             <Label Content="давность" Margin="10,0,0,0" />
-            <forms:DateOffsetPicker DateOffset="{Binding DateOffset}" />
+            <editors:DateOffsetPicker DateOffset="{Binding DateOffset}" />
         </DockPanel>
         <DockPanel>
             <Label Content="диагноз" />
