--- a/Diagnosis.App/Controls/Editors/PatientEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/PatientEditor.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.Forms.PatientEditor"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Editors.PatientEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
+             xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
     <UserControl.Resources>
@@ -36,11 +36,11 @@
         </DockPanel>
         <DockPanel>
             <Label Content="Дата рождения"  />
-            <forms:AgePicker Margin="0,1,0,0" />
+            <editors:AgePicker Margin="0,1,0,0" />
         </DockPanel>
         <DockPanel>
             <Label Content="Пол" />
-            <forms:SexChooser Width="100" HorizontalAlignment="Left" Margin="0,6,0,0" />
+            <editors:SexChooser Width="100" HorizontalAlignment="Left" Margin="0,6,0,0" />
         </DockPanel>
     </StackPanel>
 </UserControl>
