--- a/Diagnosis.App/Controls/Editors/SexChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/SexChooser.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Converters="clr-namespace:Diagnosis.App.Converters" 
-             x:Class="Diagnosis.App.Controls.Forms.SexChooser"
+             x:Class="Diagnosis.App.Controls.Editors.SexChooser"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
