--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
+             xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
              xmlns:screen="clr-namespace:Diagnosis.App.Screens"
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
@@ -30,11 +30,11 @@
                 </TabItem.Header>
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10">
                     <StackPanel>
-                        <forms:PatientEditor />
+                        <editors:PatientEditor />
 
                         <Separator />
 
-                        <forms:PropertiesChooser Margin="0,5" />
+                        <editors:PropertiesChooser Margin="0,5" />
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
