add EqualityoBool and IsLastItem converters

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -15,8 +15,10 @@
         <conv:AgeToYearsLabel x:Key="AgeToLabel" />
         <conv:BoolToSexSign x:Key="SexToSign" />
         <conv:DateUnitToLabel x:Key="unitConverter" />
-        <conv:Summator x:Key="summatorConverter" />
-        <conv:ManToShortName x:Key="shortName" />
+        <conv:Summator x:Key="SummatorConverter" />
+        <conv:ManToShortName x:Key="ManToShortName" />
+        <conv:EqualityToBoolConverter x:Key="EqualityToBool" />
+        <conv:IsLastItem x:Key="IsLastItem" />
 
         <s:Boolean x:Key="True">True</s:Boolean>
         <s:Boolean x:Key="False">False</s:Boolean>
