--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -26,7 +26,7 @@
                           ItemsSource="{Binding DoctorsManager.Doctors}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Converter={StaticResource shortName}}" />
+                            <TextBlock Text="{Binding Converter={StaticResource ManToShortName}}" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                     
