--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -8,99 +8,149 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="500">
+             d:DesignHeight="300" d:DesignWidth="430" MinWidth="250" MaxWidth="450">
     <UserControl.Resources>
-        <Style TargetType="DockPanel">
+        <s:Double x:Key="lineMargin">10</s:Double>
+
+        <Style x:Key="line" TargetType="FrameworkElement">
             <Setter Property="Margin">
                 <Setter.Value>
-                    <Thickness Bottom="10"></Thickness>
+                    <Thickness Bottom="{StaticResource lineMargin}"/>
                 </Setter.Value>
             </Setter>
         </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-
-        <StackPanel>
-            <controls:AutoComplete DataContext="{Binding WordSearch}" />
-            <DockPanel>
-                <StackPanel DockPanel.Dock="Top"
-                        Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
-                    <TextBlock Margin="0,0,0,2">Слова:</TextBlock>
-                    <ListView ItemsSource="{Binding Words}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <controls:TreeItemLight />
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
+        <TextBlock Style="{StaticResource ScreenTitle}">Поиск</TextBlock>
+        <Expander x:Name="searchControls"
+                  Grid.Row="1"
+                  IsExpanded="{Binding ControlsVisible}"
+                  ExpandDirection="Up">
+            <Expander.Header>
+                <StackPanel x:Name="searchDescription"
+                    Visibility="{Binding ControlsVisible, Converter={StaticResource NegBooleanToVisibilityConverter}}">
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
+                        <TextBlock Text="любое из слов: " Visibility="{Binding AnyWord, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBlock Text="все слова: " Visibility="{Binding AnyWord, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
+                        <controls:CommaList DataContext="{Binding Words}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding SelectedCategories.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
+                        <TextBlock Text="типы записи: "></TextBlock>
+                        <controls:CommaList DataContext="{Binding SelectedCategories}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding AppDateVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <TextBlock Text="дата приёма"></TextBlock>
+                        <TextBlock Text="{Binding AppDateGt, StringFormat='{} от {0:d}', TargetNullValue=''}" />
+                        <TextBlock Text="{Binding AppDateLt, StringFormat='{} до {0:d}', TargetNullValue=''}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding HrDateVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <TextBlock Text="давность признака"></TextBlock>
+                        <TextBlock>
+                            <Run Text="{Binding HrDateGt.Offset, StringFormat='{} от {0}', TargetNullValue=''}" />
+                            <Run>
+                                <MultiBinding Converter="{StaticResource unitConverter}">
+                                    <Binding Path="HrDateGt.Unit" />
+                                    <Binding Path="HrDateGt.Offset" />
+                                </MultiBinding>
+                            </Run>
+                        </TextBlock>
+                        <TextBlock>
+                            <Run Text="{Binding HrDateLt.Offset, StringFormat='{} до {0}', TargetNullValue=''}" />
+                            <Run>
+                                <MultiBinding Converter="{StaticResource unitConverter}">
+                                    <Binding Path="HrDateLt.Unit" />
+                                    <Binding Path="HrDateLt.Offset" />
+                                </MultiBinding>
+                            </Run>
+                        </TextBlock>
+                    </StackPanel>
                 </StackPanel>
-                <CheckBox IsChecked="{Binding AnyWord}">Хотя бы одно слово</CheckBox>
-            </DockPanel>
-            <DockPanel>
-                <forms:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Дата приема</TextBlock>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
+            </Expander.Header>
 
-                    <TextBlock Margin="0,0,5,0">от</TextBlock>
-                    <forms:ComboBoxDatePicker Grid.Column="1" x:Name="firstCol"
+            <StackPanel>
+                <controls:AutoComplete DataContext="{Binding WordSearch}" />
+                <DockPanel Style="{StaticResource line}">
+                    <StackPanel DockPanel.Dock="Top"
+                        Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
+                        <TextBlock Margin="0,0,0,2">Слова:</TextBlock>
+                        <ListView ItemsSource="{Binding Words}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:TreeItemLight />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                    <CheckBox IsChecked="{Binding AnyWord}">Хотя бы одно слово</CheckBox>
+                </DockPanel>
+                <DockPanel Style="{StaticResource line}">
+                    <editors:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
+                </DockPanel>
+                <DockPanel>
+                    <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Дата приема</TextBlock>
+                    <WrapPanel>
+                        <DockPanel>
+                            <DockPanel.Style>
+                                <Style TargetType="DockPanel">
+                                    <Setter Property="Margin">
+                                        <Setter.Value>
+                                            <Thickness Bottom="{StaticResource lineMargin}"
+                                                       Right="5"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </DockPanel.Style>
+                            <TextBlock Width="18">от</TextBlock>
+                            <editors:ComboBoxDatePicker
                                           Year="{Binding AppYearLower, Mode=TwoWay}"
                                           Month="{Binding AppMonthLower, Mode=TwoWay}"
                                           Day="{Binding AppDayLower, Mode=TwoWay}" />
-                    <TextBlock Grid.Column="2" Margin="10,0,5,0">до</TextBlock>
-                    <forms:ComboBoxDatePicker Grid.Column="3"
+                        </DockPanel>
+                        <DockPanel Style="{StaticResource line}">
+                            <TextBlock Margin="-5,0,5,0" Padding="5,0,0,0" Width="18">до</TextBlock>
+                            <editors:ComboBoxDatePicker
                                           Year="{Binding AppYearUpper, Mode=TwoWay}"
                                           Month="{Binding AppMonthUpper, Mode=TwoWay}"
                                           Day="{Binding AppDayUpper, Mode=TwoWay}" />
-                </Grid>
-            </DockPanel>
-            <DockPanel>
-                <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Давность</TextBlock>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
+                        </DockPanel>
+                    </WrapPanel>
+                </DockPanel>
+                <DockPanel Style="{StaticResource line}">
+                    <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Давность между</TextBlock>
+                    <DockPanel>
+                        <editors:DateOffsetPicker DateOffset="{Binding HrDateOffsetLower}" />
+                        <TextBlock Margin="5,0,5,0">и</TextBlock>
+                        <editors:DateOffsetPicker DateOffset="{Binding HrDateOffsetUpper}" />
+                    </DockPanel>
+                </DockPanel>
 
-                    <TextBlock Margin="0,0,5,0">от</TextBlock>
-                    <forms:DateOffsetPicker Grid.Column="1"
-                                        Width="{Binding ActualWidth, ElementName=firstCol}"
-                                        DateOffset="{Binding HrDateOffsetLower}" />
-                    <TextBlock Grid.Column="2" Margin="10,0,5,0">до</TextBlock>
-                    <forms:DateOffsetPicker  Grid.Column="3" DateOffset="{Binding HrDateOffsetUpper}" />
-                </Grid>
-            </DockPanel>
+                <Button Command="{Binding SearchCommand}" Height="25" Width="150" HorizontalAlignment="Left" Style="{StaticResource line}">Искать</Button>
+            </StackPanel>
+        </Expander>
 
-            <Button Command="{Binding SearchCommand}" Height="33" Margin="0,0,0,10">Искать</Button>            
-        </StackPanel>
-
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
             <ListView ItemsSource="{Binding Results}"
                       Style="{StaticResource list}"
                       HorizontalContentAlignment="Stretch"
                       Visibility="{Binding Results.Count, Converter={StaticResource CountToVisibility}}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <card:HealthRecord />
+                        <card:SearchResult />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </ScrollViewer>
 
-        <TextBlock Grid.Row="1" 
+        <TextBlock Grid.Row="2"
                    HorizontalAlignment="Center"
                    Visibility="{Binding NoResultsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
             Не найдено подходящих записей.
