--- a/Diagnosis.App/Controls/Card/PatientHeader.xaml
+++ b/Diagnosis.App/Controls/Card/PatientHeader.xaml
@@ -26,7 +26,7 @@
         </DockPanel>
 
         <DockPanel Grid.Row="1">
-            <TextBlock Text="{Binding ID}"
+            <TextBlock Text="{Binding Id}"
                        VerticalAlignment="Center" 
                        MinWidth="100"/>
             <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
