--- a/Diagnosis.App/MainWindow.xaml
+++ b/Diagnosis.App/MainWindow.xaml
@@ -107,9 +107,8 @@
                         </Expander>
                     </TabItem.Header>
                     <screen:Patients x:Name="patients"
-                                     Visibility="{Binding IsPatientsVisible, Converter={StaticResource NegBooleanToVisibilityConverter}}"
         			                 DataContext="{Binding PatientsManager}"
-        			                 Margin="10" />
+        			                 Margin="0,0,5,0" />
                 </TabItem>
                 <TabItem IsSelected="{Binding SearchState}"
                          Style="{StaticResource tabHeaderWithExpander}">
@@ -122,7 +121,8 @@
                         </Expander>
                     </TabItem.Header>
                     <screen:Search x:Name="search"
-                                   DataContext="{Binding Search}" />
+                                   DataContext="{Binding Search}"
+                                   Margin="0,0,5,0" />
                 </TabItem>
             </TabControl>
         </DockPanel>
