--- a/Diagnosis.App/Controls/Card/AppointmentsList.xaml
+++ b/Diagnosis.App/Controls/Card/AppointmentsList.xaml
@@ -3,8 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="50" d:DesignWidth="300">
+    <UserControl.Resources>
+        <InputBindingCollection x:Shared="False" x:Key="AppInputBindings">
+            <KeyBinding Key="Enter" Command="{Binding Editable.CommitCommand}" />
+            <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
+        </InputBindingCollection>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -16,28 +23,39 @@
                   SelectedItem="{Binding SelectedAppointment}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"/>
+                    <StackPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <DockPanel>
+                    <Grid Style="{StaticResource gridIsDirty}" MaxWidth="150">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Button Command="{Binding Editable.DeleteCommand}"
+                            Height="24"
+                            Width="24"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Visibility="{Binding Editable.CanBeDeleted, Converter={StaticResource BooleanToVisibilityConverter}}">×</Button>
+
                         <DockPanel DockPanel.Dock="Top" MinWidth="150">
                             <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}" />
                             <TextBlock Text="{Binding Doctor, Converter={StaticResource ManToShortName}}"
-                                       HorizontalAlignment="Right" 
-                                       Visibility="{Binding IsDoctorFromCourse, Converter={StaticResource NegBooleanToVisibilityConverter}}"/>
+                                       HorizontalAlignment="Right"
+                                       Visibility="{Binding IsDoctorFromCourse, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
                         </DockPanel>
-                        <ItemsControl ItemsSource="{Binding HealthRecords}">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" />
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </DockPanel>
+                        <controls:CommaList Grid.Row="1" DataContext="{Binding HealthRecords}" />
+                    </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <!--<Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />-->
+                    <Setter Property="controls:Attached.InputBindings" Value="{StaticResource AppInputBindings}" />                    
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <Button Grid.Column="1"
